--- a/checkLibs/ios/Podfile
+++ b/checkLibs/ios/Podfile
@@ -77,6 +77,8 @@ target 'checkLibs' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+  pod 'BVLinearGradient', :path => '../node_modules/react-native-linear-gradient'
+
   target 'checkLibsTests' do
     inherit! :complete
     # Pods for testing
