--- a/checkLibs/package.json
+++ b/checkLibs/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-shimmer-placeholder": "^1.0.35",
     "rn-placeholder": "^3.0.0"
   },
   "devDependencies": {
