--- a/checkLibs/android/app/build.gradle
+++ b/checkLibs/android/app/build.gradle
@@ -215,6 +215,7 @@ dependencies {
     }
 
     implementation project(':react-native-linear-gradient')
+    compile project(':react-native-i18n')
 }
 
 // Run this once to be able to run the application with BUCK
