--- a/checkLibs/package.json
+++ b/checkLibs/package.json
@@ -7,11 +7,14 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "clean:android": "cd android && ./gradlew clean && cd ../",
+    "clean:ios": "cd ios && xcodebuild clean && cd ../"
   },
   "dependencies": {
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-i18n": "^2.0.15",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-shimmer-placeholder": "^1.0.35",
     "rn-placeholder": "^3.0.0"
