--- a/checkLibs/package.json
+++ b/checkLibs/package.json
@@ -17,6 +17,7 @@
     "react-native-i18n": "^2.0.15",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-shimmer-placeholder": "^1.0.35",
+    "react-native-sqlite-storage": "^5.0.0",
     "rn-placeholder": "^3.0.0"
   },
   "devDependencies": {
