install and usage ==> ok

--- a/checkLibs/ios/Podfile
+++ b/checkLibs/ios/Podfile
@@ -81,6 +81,8 @@ target 'checkLibs' do
 
   pod 'react-native-sqlite-storage', :path => '../node_modules/react-native-sqlite-storage'
 
+  pod 'react-native-maps', :path => '../node_modules/react-native-maps'
+
   target 'checkLibsTests' do
     inherit! :complete
     # Pods for testing
