--- a/checkLibs/android/app/src/main/AndroidManifest.xml
+++ b/checkLibs/android/app/src/main/AndroidManifest.xml
@@ -10,6 +10,11 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
+
+        <meta-data
+                android:name="com.google.android.geo.API_KEY"
+                android:value="AIzaSyB8vk5mnb5xgTFMtTlaf2L2bbqo2dclaD4"/>
+
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
