--- a/checkLibs/android/settings.gradle
+++ b/checkLibs/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'checkLibs'
+include ':react-native-maps'
+project(':react-native-maps').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-maps/lib/android')
 include ':react-native-sqlite-storage'
 project(':react-native-sqlite-storage').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-sqlite-storage/platforms/android')
 include ':app', ':react-native-i18n'
