--- a/checkLibs/package.json
+++ b/checkLibs/package.json
@@ -16,6 +16,7 @@
     "react-native": "0.62.2",
     "react-native-i18n": "^2.0.15",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-maps": "0.27.1",
     "react-native-shimmer-placeholder": "^1.0.35",
     "react-native-sqlite-storage": "^5.0.0",
     "rn-placeholder": "^3.0.0"
