--- a/checkLibs/android/app/build.gradle
+++ b/checkLibs/android/app/build.gradle
@@ -214,6 +214,8 @@ dependencies {
         implementation jscFlavor
     }
 
+    implementation project(':react-native-fs')
+
     implementation project(':react-native-linear-gradient')
     compile project(':react-native-i18n')
 }
