--- a/checkLibs/ios/Podfile
+++ b/checkLibs/ios/Podfile
@@ -83,6 +83,8 @@ target 'checkLibs' do
 
   pod 'react-native-maps', :path => '../node_modules/react-native-maps'
 
+  pod 'rn-fetch-blob', :path => '../node_modules/rn-fetch-blob'
+
   target 'checkLibsTests' do
     inherit! :complete
     # Pods for testing
