--- a/checkLibs/package.json
+++ b/checkLibs/package.json
@@ -15,12 +15,14 @@
     "@react-native-community/geolocation": "^2.0.2",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-fs": "^2.16.6",
     "react-native-i18n": "^2.0.15",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-maps": "0.27.1",
     "react-native-permissions": "^2.1.5",
     "react-native-shimmer-placeholder": "^1.0.35",
     "react-native-sqlite-storage": "^5.0.0",
+    "rn-fetch-blob": "^0.12.0",
     "rn-placeholder": "^3.0.0"
   },
   "devDependencies": {
