config ios ==> done

--- a/checkLibs/ios/Podfile
+++ b/checkLibs/ios/Podfile
@@ -45,6 +45,9 @@ def flipper_post_install(installer)
 end
 
 target 'checkLibs' do
+# ----- Pods var
+permissions_path = '../node_modules/react-native-permissions/ios'
+
   # Pods for checkLibs
   pod 'FBLazyVector', :path => "../node_modules/react-native/Libraries/FBLazyVector"
   pod 'FBReactNativeSpec', :path => "../node_modules/react-native/Libraries/FBReactNativeSpec"
@@ -85,6 +88,24 @@ target 'checkLibs' do
 
   pod 'rn-fetch-blob', :path => '../node_modules/rn-fetch-blob'
 
+  # ----- Custom config Permision
+    pod 'Permission-BluetoothPeripheral', :path => "#{permissions_path}/BluetoothPeripheral.podspec"
+      pod 'Permission-Calendars', :path => "#{permissions_path}/Calendars.podspec"
+      pod 'Permission-Camera', :path => "#{permissions_path}/Camera.podspec"
+      pod 'Permission-Contacts', :path => "#{permissions_path}/Contacts.podspec"
+      pod 'Permission-FaceID', :path => "#{permissions_path}/FaceID.podspec"
+      pod 'Permission-LocationAlways', :path => "#{permissions_path}/LocationAlways.podspec"
+      pod 'Permission-LocationWhenInUse', :path => "#{permissions_path}/LocationWhenInUse.podspec"
+      pod 'Permission-MediaLibrary', :path => "#{permissions_path}/MediaLibrary.podspec"
+      pod 'Permission-Microphone', :path => "#{permissions_path}/Microphone.podspec"
+      pod 'Permission-Motion', :path => "#{permissions_path}/Motion.podspec"
+      pod 'Permission-Notifications', :path => "#{permissions_path}/Notifications.podspec"
+      pod 'Permission-PhotoLibrary', :path => "#{permissions_path}/PhotoLibrary.podspec"
+      pod 'Permission-Reminders', :path => "#{permissions_path}/Reminders.podspec"
+      pod 'Permission-Siri', :path => "#{permissions_path}/Siri.podspec"
+      pod 'Permission-SpeechRecognition', :path => "#{permissions_path}/SpeechRecognition.podspec"
+      pod 'Permission-StoreKit', :path => "#{permissions_path}/StoreKit.podspec"
+
   target 'checkLibsTests' do
     inherit! :complete
     # Pods for testing
@@ -110,3 +131,5 @@ target 'checkLibs-tvOS' do
     # Pods for testing
   end
 end
+
+
